@@ -1325,6 +1325,30 @@ class CostCurrencyColumn(query_compile.EvalColumn):
         cost = context.posting.cost
         return cost.currency if cost else ''
 
+class CostDateColumn(query_compile.EvalColumn):
+    "The cost currency of the posting."
+    __equivalent__ = 'posting.cost.date'
+    __intypes__ = [data.Posting]
+
+    def __init__(self):
+        super().__init__(datetime.date)
+
+    def __call__(self, context):
+        cost = context.posting.cost
+        return cost.date if cost else None
+
+class CostLabelColumn(query_compile.EvalColumn):
+    "The cost currency of the posting."
+    __equivalent__ = 'posting.cost.label'
+    __intypes__ = [data.Posting]
+
+    def __init__(self):
+        super().__init__(str)
+
+    def __call__(self, context):
+        cost = context.posting.cost
+        return cost.label if cost else ''
+
 class PositionColumn(query_compile.EvalColumn):
     "The position for the posting. These can be summed into inventories."
     __equivalent__ = 'posting'
@@ -1396,6 +1420,8 @@ class FilterPostingsEnvironment(query_compile.CompilationEnvironment):
         'currency'       : CurrencyColumn,
         'cost_number'    : CostNumberColumn,
         'cost_currency'  : CostCurrencyColumn,
+        'cost_date'      : CostDateColumn,
+        'cost_label'     : CostLabelColumn,
         'position'       : PositionColumn,
         'change'         : PositionColumn,  # Backwards compatible.
         'price'          : PriceColumn,
